--- a/notebooks/DataExploration.ipynb
+++ b/notebooks/DataExploration.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 84,
    "id": "53f396cf-0b2d-4c36-8924-a61f06479364",
    "metadata": {},
    "outputs": [
@@ -101,54 +101,57 @@
      "output_type": "stream",
      "text": [
       "Training Set A                                                        Training Set B\n",
-      "________________________________________________________________________________________________________________________\n",
-      "HR: 61189 / 790215                        7.74%                   |HR:                  92210 / 761995   12.10%\n",
-      "O2Sat: 95079 / 790215                    12.03%                   |O2Sat:              107657 / 761995   14.13%\n",
-      "Temp: 523314 / 790215                    66.22%                   |Temp:               503670 / 761995   66.10%\n",
-      "SBP: 120201 / 790215                     15.21%                   |SBP:                106064 / 761995   13.92%\n",
-      "MAP: 80858 / 790215                      10.23%                   |MAP:                112412 / 761995   14.75%\n",
-      "DBP: 380297 / 790215                     48.13%                   |DBP:                106257 / 761995   13.94%\n",
-      "Resp: 77258 / 790215                      9.78%                   |Resp:               161077 / 761995   21.14%\n",
-      "EtCO2: 790215 / 790215                  100.00%                   |EtCO2:              704359 / 761995   92.44%\n",
-      "BaseExcess: 707834 / 790215              89.57%                   |BaseExcess:         760231 / 761995   99.77%\n",
-      "HCO3: 726598 / 790215                    91.95%                   |HCO3:               760584 / 761995   99.81%\n",
-      "FiO2: 678060 / 790215                    85.81%                   |FiO2:               744785 / 761995   97.74%\n",
-      "pH: 699600 / 790215                      88.53%                   |pH:                 745037 / 761995   97.77%\n",
-      "PaCO2: 720927 / 790215                   91.23%                   |PaCO2:              744982 / 761995   97.77%\n",
-      "SaO2: 751055 / 790215                    95.04%                   |SaO2:               747594 / 761995   98.11%\n",
-      "AST: 778395 / 790215                     98.50%                   |AST:                748632 / 761995   98.25%\n",
-      "BUN: 725739 / 790215                     91.84%                   |BUN:                719903 / 761995   94.48%\n",
-      "Alkalinephos: 778683 / 790215            98.54%                   |Alkalinephos:       748586 / 761995   98.24%\n",
-      "Calcium: 750897 / 790215                 95.02%                   |Calcium:            709982 / 761995   93.17%\n",
-      "Chloride: 724438 / 790215                91.68%                   |Chloride:           757306 / 761995   99.38%\n",
-      "Creatinine: 737728 / 790215              93.36%                   |Creatinine:         719866 / 761995   94.47%\n",
-      "Bilirubin_direct: 789033 / 790215        99.85%                   |Bilirubin_direct:   760187 / 761995   99.76%\n",
-      "Glucose: 693559 / 790215                 87.77%                   |Glucose:            593135 / 761995   77.84%\n",
-      "Lactate: 763072 / 790215                 96.57%                   |Lactate:            747692 / 761995   98.12%\n",
-      "Magnesium: 728734 / 790215               92.22%                   |Magnesium:          725525 / 761995   95.21%\n",
-      "Phosphate: 750319 / 790215               94.95%                   |Phosphate:          739590 / 761995   97.06%\n",
-      "Potassium: 704379 / 790215               89.14%                   |Potassium:          703306 / 761995   92.30%\n",
-      "Bilirubin_total: 780522 / 790215         98.77%                   |Bilirubin_total:    748547 / 761995   98.24%\n",
-      "TroponinI: 789250 / 790215               99.88%                   |TroponinI:          748179 / 761995   98.19%\n",
-      "Hct: 697157 / 790215                     88.22%                   |Hct:                717620 / 761995   94.18%\n",
-      "Hgb: 720394 / 790215                     91.16%                   |Hgb:                717225 / 761995   94.12%\n",
-      "PTT: 751909 / 790215                     95.15%                   |PTT:                754602 / 761995   99.03%\n",
-      "WBC: 730867 / 790215                     92.49%                   |WBC:                721896 / 761995   94.74%\n",
-      "Fibrinogen: 784185 / 790215              99.24%                   |Fibrinogen:         757783 / 761995   99.45%\n",
-      "Platelets: 738716 / 790215               93.48%                   |Platelets:          721285 / 761995   94.66%\n",
-      "Age: 0 / 790215                           0.00%                   |Age:                     0 / 761995    0.00%\n",
-      "Gender: 0 / 790215                        0.00%                   |Gender:                  0 / 761995    0.00%\n",
-      "Unit1: 386165 / 790215                   48.87%                   |Unit1:              225795 / 761995   29.63%\n",
-      "Unit2: 386165 / 790215                   48.87%                   |Unit2:              225795 / 761995   29.63%\n",
-      "HospAdmTime: 8 / 790215                   0.00%                   |HospAdmTime:             0 / 761995    0.00%\n",
-      "ICULOS: 0 / 790215                        0.00%                   |ICULOS:                  0 / 761995    0.00%\n",
-      "SepsisLabel: 0 / 790215                   0.00%                   |SepsisLabel:             0 / 761995    0.00%\n"
+      "Column          num of NaN  total  Percentage                   Column          num of NaN  total  Percentage \n",
+      "_____________________________________________________________________________________________________________\n",
+      "HR:                  61189 / 790215    7.74%                   |HR:                  92210 / 761995   12.10%\n",
+      "O2Sat:               95079 / 790215   12.03%                   |O2Sat:              107657 / 761995   14.13%\n",
+      "Temp:               523314 / 790215   66.22%                   |Temp:               503670 / 761995   66.10%\n",
+      "SBP:                120201 / 790215   15.21%                   |SBP:                106064 / 761995   13.92%\n",
+      "MAP:                 80858 / 790215   10.23%                   |MAP:                112412 / 761995   14.75%\n",
+      "DBP:                380297 / 790215   48.13%                   |DBP:                106257 / 761995   13.94%\n",
+      "Resp:                77258 / 790215    9.78%                   |Resp:               161077 / 761995   21.14%\n",
+      "EtCO2:              790215 / 790215  100.00%                   |EtCO2:              704359 / 761995   92.44%\n",
+      "BaseExcess:         707834 / 790215   89.57%                   |BaseExcess:         760231 / 761995   99.77%\n",
+      "HCO3:               726598 / 790215   91.95%                   |HCO3:               760584 / 761995   99.81%\n",
+      "FiO2:               678060 / 790215   85.81%                   |FiO2:               744785 / 761995   97.74%\n",
+      "pH:                 699600 / 790215   88.53%                   |pH:                 745037 / 761995   97.77%\n",
+      "PaCO2:              720927 / 790215   91.23%                   |PaCO2:              744982 / 761995   97.77%\n",
+      "SaO2:               751055 / 790215   95.04%                   |SaO2:               747594 / 761995   98.11%\n",
+      "AST:                778395 / 790215   98.50%                   |AST:                748632 / 761995   98.25%\n",
+      "BUN:                725739 / 790215   91.84%                   |BUN:                719903 / 761995   94.48%\n",
+      "Alkalinephos:       778683 / 790215   98.54%                   |Alkalinephos:       748586 / 761995   98.24%\n",
+      "Calcium:            750897 / 790215   95.02%                   |Calcium:            709982 / 761995   93.17%\n",
+      "Chloride:           724438 / 790215   91.68%                   |Chloride:           757306 / 761995   99.38%\n",
+      "Creatinine:         737728 / 790215   93.36%                   |Creatinine:         719866 / 761995   94.47%\n",
+      "Bilirubin_direct:   789033 / 790215   99.85%                   |Bilirubin_direct:   760187 / 761995   99.76%\n",
+      "Glucose:            693559 / 790215   87.77%                   |Glucose:            593135 / 761995   77.84%\n",
+      "Lactate:            763072 / 790215   96.57%                   |Lactate:            747692 / 761995   98.12%\n",
+      "Magnesium:          728734 / 790215   92.22%                   |Magnesium:          725525 / 761995   95.21%\n",
+      "Phosphate:          750319 / 790215   94.95%                   |Phosphate:          739590 / 761995   97.06%\n",
+      "Potassium:          704379 / 790215   89.14%                   |Potassium:          703306 / 761995   92.30%\n",
+      "Bilirubin_total:    780522 / 790215   98.77%                   |Bilirubin_total:    748547 / 761995   98.24%\n",
+      "TroponinI:          789250 / 790215   99.88%                   |TroponinI:          748179 / 761995   98.19%\n",
+      "Hct:                697157 / 790215   88.22%                   |Hct:                717620 / 761995   94.18%\n",
+      "Hgb:                720394 / 790215   91.16%                   |Hgb:                717225 / 761995   94.12%\n",
+      "PTT:                751909 / 790215   95.15%                   |PTT:                754602 / 761995   99.03%\n",
+      "WBC:                730867 / 790215   92.49%                   |WBC:                721896 / 761995   94.74%\n",
+      "Fibrinogen:         784185 / 790215   99.24%                   |Fibrinogen:         757783 / 761995   99.45%\n",
+      "Platelets:          738716 / 790215   93.48%                   |Platelets:          721285 / 761995   94.66%\n",
+      "Age:                     0 / 790215    0.00%                   |Age:                     0 / 761995    0.00%\n",
+      "Gender:                  0 / 790215    0.00%                   |Gender:                  0 / 761995    0.00%\n",
+      "Unit1:              386165 / 790215   48.87%                   |Unit1:              225795 / 761995   29.63%\n",
+      "Unit2:              386165 / 790215   48.87%                   |Unit2:              225795 / 761995   29.63%\n",
+      "HospAdmTime:             8 / 790215    0.00%                   |HospAdmTime:             0 / 761995    0.00%\n",
+      "ICULOS:                  0 / 790215    0.00%                   |ICULOS:                  0 / 761995    0.00%\n",
+      "SepsisLabel:             0 / 790215    0.00%                   |SepsisLabel:             0 / 761995    0.00%\n"
      ]
     }
    ],
    "source": [
     "heading = \"Training Set A\".ljust(70) + \"Training Set B\" +\\\n",
-    "          \"\\n\" + \"_\"*120\n",
+    "          \"\\n\" + \"Column\".ljust(16) + \"num of NaN\" + \"  total\" + \"  Percentage\".ljust(31) +\\\n",
+    "                 \"Column\".ljust(16) + \"num of NaN\" + \"  total\" + \"  Percentage \" +\\\n",
+    "          \"\\n\" + \"_\"*109\n",
     "print(heading)\n",
     "\n",
     "# Iterate through the dictionary and print the required format\n",
@@ -166,70 +169,6 @@
     "    outputB = f\"{columnB}:\".ljust(17) + f\" {nan_countB} \".rjust(10) + f\"/ {total_countB}\".ljust(10) + f\"{percentage:6.2f}%\"\n",
     "    \n",
     "    print(outputA + \"|\".rjust(20) + outputB)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "3fbb5b48-76be-4cda-805e-abd39f84a6df",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HR: 92210 / 761995                       12.10%\n",
-      "O2Sat: 107657 / 761995                   14.13%\n",
-      "Temp: 503670 / 761995                    66.10%\n",
-      "SBP: 106064 / 761995                     13.92%\n",
-      "MAP: 112412 / 761995                     14.75%\n",
-      "DBP: 106257 / 761995                     13.94%\n",
-      "Resp: 161077 / 761995                    21.14%\n",
-      "EtCO2: 704359 / 761995                   92.44%\n",
-      "BaseExcess: 760231 / 761995              99.77%\n",
-      "HCO3: 760584 / 761995                    99.81%\n",
-      "FiO2: 744785 / 761995                    97.74%\n",
-      "pH: 745037 / 761995                      97.77%\n",
-      "PaCO2: 744982 / 761995                   97.77%\n",
-      "SaO2: 747594 / 761995                    98.11%\n",
-      "AST: 748632 / 761995                     98.25%\n",
-      "BUN: 719903 / 761995                     94.48%\n",
-      "Alkalinephos: 748586 / 761995            98.24%\n",
-      "Calcium: 709982 / 761995                 93.17%\n",
-      "Chloride: 757306 / 761995                99.38%\n",
-      "Creatinine: 719866 / 761995              94.47%\n",
-      "Bilirubin_direct: 760187 / 761995        99.76%\n",
-      "Glucose: 593135 / 761995                 77.84%\n",
-      "Lactate: 747692 / 761995                 98.12%\n",
-      "Magnesium: 725525 / 761995               95.21%\n",
-      "Phosphate: 739590 / 761995               97.06%\n",
-      "Potassium: 703306 / 761995               92.30%\n",
-      "Bilirubin_total: 748547 / 761995         98.24%\n",
-      "TroponinI: 748179 / 761995               98.19%\n",
-      "Hct: 717620 / 761995                     94.18%\n",
-      "Hgb: 717225 / 761995                     94.12%\n",
-      "PTT: 754602 / 761995                     99.03%\n",
-      "WBC: 721896 / 761995                     94.74%\n",
-      "Fibrinogen: 757783 / 761995              99.45%\n",
-      "Platelets: 721285 / 761995               94.66%\n",
-      "Age: 0 / 761995                           0.00%\n",
-      "Gender: 0 / 761995                        0.00%\n",
-      "Unit1: 225795 / 761995                   29.63%\n",
-      "Unit2: 225795 / 761995                   29.63%\n",
-      "HospAdmTime: 0 / 761995                   0.00%\n",
-      "ICULOS: 0 / 761995                        0.00%\n",
-      "SepsisLabel: 0 / 761995                   0.00%\n"
-     ]
-    }
-   ],
-   "source": [
-    "for columnB, countsB in nan_countsB.items():\n",
-    "    nan_countB = countsB[\"nan\"]\n",
-    "    total_countB = countsB[\"total\"]\n",
-    "    percentage = (nan_countB / total_countB) * 100 if total_countB else 0\n",
-    "    outputB = f\"{columnB}: {nan_countB} / {total_countB}\".ljust(40) + f\"{percentage:6.2f}%\"\n",
-    "    \n",
-    "    print(outputB)"
    ]
   },
   {
