--- a/notebooks/DataExploration.ipynb
+++ b/notebooks/DataExploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "id": "3e0a4406-e2d4-4a49-83b1-7d66bc61b2fb",
    "metadata": {},
    "outputs": [],
@@ -19,15 +19,16 @@
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "\n",
     "current_dir = os.getcwd()\n",
-    "utils_path = os.path.join(current_dir, '..', 'utils')\n",
+    "# utils_path = os.path.join(current_dir, '..', 'utils')\n",
+    "utils_path = os.path.join(current_dir, '..')\n",
     "utils_abs_path = os.path.abspath(utils_path)\n",
     "\n",
     "if utils_abs_path not in sys.path:\n",
     "    sys.path.append(utils_abs_path)\n",
     "\n",
     "import get_data\n",
-    "from impute_methods import *\n",
-    "\n",
+    "# from impute_methods import *\n",
+    "from utils.impute_methods import impute_linear_interpolation\n",
     "\n",
     "DATA_PATH = get_data.get_dataset_abspath()\n",
     "\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "id": "1db429f0-9ac1-4f08-922a-67575a3b17a2",
    "metadata": {},
    "outputs": [
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "id": "284fe0fd-05e7-48cd-9108-2f52df9d2505",
    "metadata": {},
    "outputs": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "53f396cf-0b2d-4c36-8924-a61f06479364",
    "metadata": {},
    "outputs": [
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "id": "bf159fd0-a29d-4dcf-b253-04ece01b5145",
    "metadata": {},
    "outputs": [
@@ -254,26 +255,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "id": "45cc9fdb-213e-49df-a6a8-e03c77998a14",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'impute_linear_interpolation' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[34], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m imputed_data \u001b[38;5;241m=\u001b[39m \u001b[43mimpute_linear_interpolation\u001b[49m(file_data, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHR\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(imputed_data)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'impute_linear_interpolation' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     88.000000\n",
+      "1     76.000000\n",
+      "2     72.000000\n",
+      "3     81.000000\n",
+      "4     87.500000\n",
+      "5     94.000000\n",
+      "6     80.000000\n",
+      "7     88.000000\n",
+      "8     78.000000\n",
+      "9     80.000000\n",
+      "10    86.000000\n",
+      "11    86.000000\n",
+      "12    82.333333\n",
+      "13    78.666667\n",
+      "14    75.000000\n",
+      "15    69.000000\n",
+      "16    77.000000\n",
+      "17    85.000000\n",
+      "18    83.000000\n",
+      "19    84.000000\n",
+      "20    73.000000\n",
+      "21    73.000000\n",
+      "22    85.000000\n",
+      "23    97.000000\n",
+      "Name: HR, dtype: float64\n"
      ]
     }
    ],
    "source": [
+    "# This linearly interpolates the Heart Rate values which could be sufficient\n",
     "imputed_data = impute_linear_interpolation(file_data, 'HR')\n",
     "\n",
-    "print(imputed_data)"
+    "print(imputed_data['HR'])"
    ]
   },
   {
