Got rid of excessive code

--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -168,34 +168,26 @@
     "# Fill in some data that is easily imputed\n",
     "dataset = get_data.get_dataset_as_df()\n",
     "\n",
-    "# Imputes Heart Rate using linear interpolation\n",
-    "dataset = impute_linear_interpolation(dataset, 'HR')\n",
-    "print(\"Finished imputing Heart Rate\")\n",
-    "\n",
     "# Imputes O2Sat using linear interpolation\n",
     "# Other methods might be better based on the data distribution (consider Spline or Polynomial Interpolation)\n",
-    "dataset = impute_linear_interpolation(dataset, 'O2Sat')\n",
-    "print(\"Finished imputing O2Sat\")\n",
     "\n",
     "# Impute SBP using linear interpolation\n",
     "# We can consider Forward Fill or Backward Fill if we assume the blood pressure should remain relatively stable\n",
-    "dataset = impute_linear_interpolation(dataset, 'SBP')\n",
-    "print(\"Finished imputing SBP\")\n",
     "\n",
     "# Impute MAP using linear interpolation\n",
     "# To be more sophiscticated the data can be imputed with custom models to take into account SBP and DBP as there might be correlation\n",
-    "dataset = impute_linear_interpolation(dataset, 'MAP')\n",
-    "print(\"Finished imputing MAP\")\n",
     "\n",
     "# Impute DBP using linear interpolation\n",
     "# Same as SBP, we might consider Spline\n",
-    "dataset = impute_linear_interpolation(dataset, 'DBP')\n",
-    "print(\"Finished imputing DBP\")\n",
     "\n",
     "# Impute Resp using linear interpolation\n",
     "# Same as SBP and DBP, we might consider Spline or Polynomial Interpolation\n",
-    "dataset = impute_linear_interpolation(dataset, 'Resp')\n",
-    "print(\"Finished imputing Resp\")\n",
+    "\n",
+    "columns_to_linearly_interpolate = ['HR', 'O2Sat', 'SBP', 'MAP', 'DBP', 'Resp']\n",
+    "for column in columns_to_linearly_interpolate:\n",
+    "    dataset = impute_linear_interpolation(dataset, column)\n",
+    "    print('Finished imputing ' + column)\n",
+    "\n",
     "\n",
     "\n",
     "# Use forward filling for some of the data\n",
