Added some columns to be forward filled

--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e5046131-8973-4c66-8a2e-682324d65305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NOTES:\n",
+    "# Why not use mixture of experts?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "2c24c5cc-49b0-40b2-a885-0c65aa274634",
    "metadata": {},
@@ -188,7 +199,16 @@
     "    dataset = impute_linear_interpolation(dataset, column)\n",
     "    print('Finished imputing ' + column)\n",
     "\n",
+    "columns_to_ffill = [\n",
+    "    'Temp', 'Glucose', 'Potassium', 'Calcium', \n",
+    "    'Magnesium', 'Chloride', 'Hct', 'Hgb', 'WBC', 'Platelets'\n",
+    "]\n",
+    "for column in columns_to_ffill:\n",
+    "    dataset[column].ffill(inplace=True)\n",
     "\n",
+    "# Columns not imputed\n",
+    "\n",
+    "dataset = dataset.fillna\n",
     "\n",
     "# Use forward filling for some of the data\n",
     "\n",
@@ -211,8 +231,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "60e65180-1e29-4c5b-b326-1a4c1bd55adb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HR\n",
+      "O2Sat\n",
+      "Temp\n",
+      "SBP\n",
+      "MAP\n",
+      "DBP\n",
+      "Resp\n",
+      "EtCO2\n",
+      "BaseExcess\n",
+      "HCO3\n",
+      "FiO2\n",
+      "pH\n",
+      "PaCO2\n",
+      "SaO2\n",
+      "AST\n",
+      "BUN\n",
+      "Alkalinephos\n",
+      "Calcium\n",
+      "Chloride\n",
+      "Creatinine\n",
+      "Bilirubin_direct\n",
+      "Glucose\n",
+      "Lactate\n",
+      "Magnesium\n",
+      "Phosphate\n",
+      "Potassium\n",
+      "Bilirubin_total\n",
+      "TroponinI\n",
+      "Hct\n",
+      "Hgb\n",
+      "PTT\n",
+      "WBC\n",
+      "Fibrinogen\n",
+      "Platelets\n",
+      "Age\n",
+      "Gender\n",
+      "Unit1\n",
+      "Unit2\n",
+      "HospAdmTime\n",
+      "ICULOS\n",
+      "SepsisLabel\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in dataset.columns:\n",
+    "    print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91e78e00-c2ca-44a5-a852-90ec02818979",
    "metadata": {},
    "outputs": [],
    "source": []
