--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -228,6 +228,10 @@
     "    temp = pd.DataFrame(temp_data)\n",
     "    # To complete the data use forward-filling strategy\n",
     "    temp = temp.fillna(method='ffill')\n",
+    "    # These are also the first set of features\n",
+    "    # In this configutation 66 features to be precise\n",
+    "    # They are also time indifferent\n",
+    "    features_A = np.array(temp)\n",
     "    \n",
     "\n",
     "    # some code\n",
