--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "fb50c9a9-9558-4ae1-97a8-e622c521313f",
    "metadata": {},
    "outputs": [
@@ -85,8 +85,7 @@
      "text": [
       "   20336\n",
       "   40336\n",
-      "Putting data into dataframe...\n",
-      "Done\n"
+      "Dataset loaded into a MultiIndex DataFrame.\n"
      ]
     }
    ],
@@ -103,12 +102,15 @@
     "# Continues Health Indicators\n",
     "con_col = ['HR', 'O2Sat', 'Temp', 'SBP', 'MAP', 'DBP', 'Resp', 'EtCO2']\n",
     "\n",
-    "dataset = get_data.get_dataset_as_df()"
+    "# The original way of getting data shouldn't work as there isn't a concept of individual patient file in it\n",
+    "# It just gets the data completely into a dataframe and each of the time data is one row\n",
+    "# dataset = get_data.get_dataset_as_df()\n",
+    "dataset = get_data.get_dataset()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "6dfb1530-8fc5-4878-b7ee-312ee37f4c2f",
    "metadata": {},
    "outputs": [
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "fce06dbb-c245-4fbe-9ee4-14fff851a2d0",
    "metadata": {},
    "outputs": [],
@@ -188,28 +190,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "a1a50a2b-c1fb-4d03-8d95-9a441eced99e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "33"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HR\n",
+      "O2Sat\n",
+      "Temp\n",
+      "SBP\n",
+      "MAP\n",
+      "DBP\n",
+      "Resp\n",
+      "EtCO2\n",
+      "BaseExcess\n",
+      "HCO3\n",
+      "FiO2\n",
+      "pH\n",
+      "PaCO2\n",
+      "SaO2\n",
+      "AST\n",
+      "BUN\n",
+      "Alkalinephos\n",
+      "Calcium\n",
+      "Chloride\n",
+      "Creatinine\n",
+      "Bilirubin_direct\n",
+      "Glucose\n",
+      "Lactate\n",
+      "Magnesium\n",
+      "Phosphate\n",
+      "Potassium\n",
+      "Bilirubin_total\n",
+      "TroponinI\n",
+      "Hct\n",
+      "Hgb\n",
+      "PTT\n",
+      "WBC\n",
+      "Fibrinogen\n",
+      "Platelets\n",
+      "Age\n",
+      "Gender\n",
+      "Unit1\n",
+      "Unit2\n",
+      "HospAdmTime\n",
+      "ICULOS\n",
+      "SepsisLabel\n"
+     ]
     }
    ],
    "source": [
-    "len(sep_col + con_col)"
+    "for patient in dataset:\n",
+    "    print(patient)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1fd45fea-fcd6-4ff6-a873-8f0cb1d74d5c",
    "metadata": {},
    "outputs": [],
