fixed loading by adding a function to load each patient data into a seperate dataframe

--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -83,8 +83,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   20336\n",
-      "   40336\n",
+      "   20337\n",
+      "   40337\n",
       "Dataset loaded into a MultiIndex DataFrame.\n"
      ]
     }
@@ -105,7 +105,23 @@
     "# The original way of getting data shouldn't work as there isn't a concept of individual patient file in it\n",
     "# It just gets the data completely into a dataframe and each of the time data is one row\n",
     "# dataset = get_data.get_dataset_as_df()\n",
-    "dataset = get_data.get_dataset()\n"
+    "\n",
+    "dataset, patient_id_map = get_data.get_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bf90cc6-ee19-4eae-81e9-88981a73a528",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for patient_id, file_name in patient_id_map.items():\n",
+    "    print(type(dataset.loc[patient_id]))\n",
+    "\n",
+    "# for patient_id in set(multiindex_df.index.get_level_values(0)):\n",
+    "#     patient_data = multiindex_df.loc[patient_id]\n",
+    "#     print(f\"Processing data for patient ID: {patient_id}, File: {patient_id_map[patient_id]}\")"
    ]
   },
   {
@@ -145,6 +161,8 @@
     "# Impute Resp using linear interpolation\n",
     "# Same as SBP and DBP, we might consider Spline or Polynomial Interpolation\n",
     "\n",
+    "\n",
+    "'''\n",
     "columns_to_linearly_interpolate = [\n",
     "    'HR', 'O2Sat', 'SBP', 'MAP', 'DBP', 'Resp'\n",
     "]\n",
@@ -158,6 +176,7 @@
     "]\n",
     "for column in columns_to_ffill:\n",
     "    dataset[column].ffill(inplace=True)\n",
+    "'''\n",
     "\n",
     "# Columns not imputed\n",
     "\n",
@@ -243,8 +262,9 @@
     }
    ],
    "source": [
-    "for patient in dataset:\n",
-    "    print(patient)"
+    "for patient_id in set(dataset.index.get_level_values(0)):\n",
+    "    patient_data = multiindex_df.loc[patient_id]\n",
+    "    print(f\"Processing data for patient ID: {patient_id}, File: {patient_id_map[patient_id]}\")"
    ]
   },
   {
