added function that extracts information of missing values from data | only in the notebook for now

--- a/notebooks/Unofficial_First.ipynb
+++ b/notebooks/Unofficial_First.ipynb
@@ -111,17 +111,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9bf90cc6-ee19-4eae-81e9-88981a73a528",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing data for patient ID: 1.0, File: p017721.psv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for patient_id, file_name in patient_id_map.items():\n",
+    "#     print(type(dataset.loc[patient_id]))\n",
+    "#     break\n",
+    "\n",
+    "for patient_id in set(dataset.index.get_level_values(0)):\n",
+    "    patient_data = dataset.loc[patient_id]\n",
+    "    print(f\"Processing data for patient ID: {patient_id}, File: {patient_id_map[patient_id]}\")\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e4ab624-7a23-4070-b00c-cfca8ebc9535",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for patient_id, file_name in patient_id_map.items():\n",
-    "    print(type(dataset.loc[patient_id]))\n",
+    "columns_to_linearly_interpolate = [\n",
+    "    'HR', 'O2Sat', 'SBP', 'MAP', 'DBP', 'Resp'\n",
+    "]\n",
+    "columns_to_ffill = [\n",
+    "    'Temp', 'Glucose', 'Potassium', 'Calcium', \n",
+    "    'Magnesium', 'Chloride', 'Hct', 'Hgb', 'WBC', 'Platelets'\n",
+    "]\n",
+    "columns_to_drop = [\n",
+    "    'SepsisLavel', 'TroponinI'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f03ff48c-1b03-45d6-8a9a-e6bffa7c7f2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def feature_missing_information(patient_data, columns):\n",
+    "    # temp_data holds the information from the patient file as well as the features that will be calculated\n",
+    "    temp_data = np.array(patient_data)\n",
     "\n",
-    "# for patient_id in set(multiindex_df.index.get_level_values(0)):\n",
-    "#     patient_data = multiindex_df.loc[patient_id]\n",
-    "#     print(f\"Processing data for patient ID: {patient_id}, File: {patient_id_map[patient_id]}\")"
+    "    # Calculate 3 features for each column, 2 respective of the frequency of NaN values and 1 respective of the change in recorded values\n",
+    "    for column in columns:\n",
+    "        data = np.array(patient_data[column])\n",
+    "        nan_pos = np.where(~np.isnan(data))[0]\n",
+    "        \n",
+    "        # Measurement frequency sequence\n",
+    "        interval_f1 = data.copy()\n",
+    "        # Measurement time interval\n",
+    "        interval_f2 = data.copy()\n",
+    "\n",
+    "        # If all the values are NaN\n",
+    "        if (len(nan_pos) == 0):\n",
+    "            interval_f1[:] = 0\n",
+    "            temp_data = np.column_stack((temp_data, interval_f1))\n",
+    "            interval_f2[:] = -1\n",
+    "            temp_data = np.column_stack((temp_data, interval_f2))\n",
+    "        else :\n",
+    "            # Puts number of measurements into temp_data\n",
+    "            interval_f1[: nan_pos[0]] = 0\n",
+    "            for p in range(len(nan_pos)-1):\n",
+    "                interval_f1[nan_pos[p]: nan_pos[p+1]] = p + 1\n",
+    "            interval_f1[nan_pos[-1] :] = len(nan_pos)\n",
+    "            temp_data = np.column_stack((temp_data, interval_f1))\n",
+    "\n",
+    "            # Puts the frequency of measurements into temp_data\n",
+    "            interval_f2[:nan_pos[0]] = -1\n",
+    "            for q in range(len(nan_pos) - 1):\n",
+    "                length = nan_pos[q+1] - nan_pos[q]\n",
+    "                for l in range(length):\n",
+    "                    interval_f2[nan_pos[q] + l] = l\n",
+    "\n",
+    "            length = len(case) - nan_pos[-1]\n",
+    "            for l in range(length):\n",
+    "                interval_f2[nan_pos[-1] + l] = l\n",
+    "            temp_data = np.column_stack((temp_data, interval_f2))\n",
+    "\n",
+    "        # Differential features\n",
+    "        # These capture the change in values that have been recorded (quite simply as well but it should be just fine)\n",
+    "        diff_f = sep_data.copy()\n",
+    "        diff_f = diff_f.astype(float)\n",
+    "        if len(nan_pos) <= 1:\n",
+    "            diff_f[:] = np.NaN\n",
+    "            temp_data = np.column_stack((temp_data, diff_f))\n",
+    "        else:\n",
+    "            diff_f[:nan_pos[1]] = np.NaN\n",
+    "            for p in range(1, len(nan_pos)-1):\n",
+    "                diff_f[nan_pos[p] : nan_pos[p+1]] = sep_data[nan_pos[p]] - sep_data[nan_pos[p-1]]\n",
+    "            diff_f[nan_pos[-1]:] = sep_data[nan_pos[-1]] - sep_data[nan_pos[-2]]\n",
+    "            temp_data = np.column_stack((temp_data, diff_f))\n",
+    "    \n",
+    "    return temp_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34b01ff8-e0f1-408d-8582-d1e35e53b6fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def feature_slide_window(patient_data, columns):\n",
+    "    \n",
+    "    \n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2975050-0b04-412e-bea6-a12702b2debc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_features(patient_data):\n",
+    "    # Get the column with Sepsis Label as it is not the same for each row (check documentation)\n",
+    "    labels = np.array(patient_data['SepsisLabel'])\n",
+    "    patient_data = patient_data.drop(columns=columns_to_drop)\n",
+    "\n",
+    "    # Gets information from the missing variables \n",
+    "    # This can be useful as it shows the clinical judgment, the test has not been ordered \n",
+    "    #                              (probably a good decision we should take into account)\n",
+    "    temp_data = feature_missing_information(patient_data, sep_col + con_col)\n",
+    "    temp = pd.DataFrame(temp_data)\n",
+    "    # To complete the data use forward-filling strategy\n",
+    "    temp = temp.fillna(method='ffill')\n",
+    "    # These are also the first set of features\n",
+    "    # In this configutation 99 (66 + 33 or 3 per column) features to be precise\n",
+    "    # They are also time indifferent\n",
+    "    features_A = np.array(temp)\n",
+    "\n",
+    "    # six-hour slide window statistics of selected columns\n",
+    "    columns = ['HR', 'O2Sat', 'SBP', 'MAP', 'Resp']\n",
+    "    \n",
+    "    \n",
+    "    # Forward-Filling missing values\n",
+    "    data = data.fillna(method='ffill')\n",
+    "    \n",
+    "    return features, labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55b8a3b1-2dbd-4a57-b3d1-e788e2e34604",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for patient_id in set(dataset.index.get_level_values(0)):\n",
+    "    patient_data = multiindex_df.loc[patient_id]\n",
+    "    print(f\"Processing data for patient ID: {patient_id}, File: {patient_id_map[patient_id]}\", end='\\r')\n",
+    "\n",
+    "    features, labels = extract_features(patient_data)"
    ]
   },
   {
